--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="menu" {{bind-attr class="controller.menuVisible:visible"}}>
-	<h3>push menu</h3>
+	<h3>menu</h3>
 	<ul class="nav nav-pills nav-stacked">
 		<li>{{#link-to 'index'}}home{{/link-to}}</a></li>
 		<li>{{#link-to 'events'}}events{{/link-to}}</a></li>
