--- a/app/templates/events.hbs
+++ b/app/templates/events.hbs
@@ -1,19 +1,19 @@
 <header id="header" class="navbar navbar-inverse">
-	<a {{action toggleMenu}}>
-    	Menu
+	<a {{action toggleMenu}} class="btn">
+    	<i class="icon-reorder"></i> Menu
 	</a>
 </header>
 <section id="content">
-	<div class="main container">
-		<div class="row">	
-			<div class="col">
+	<div class="main">
+		<div class="row-fluid">	
+			<div class="span12">
 				<div class="clearfix">
 					<h4>Events</h4>
 				</div>
 				<div class="list-group m-b-small">
 					{{#each}}
 					<div class="list-group-item">
-						{{#link-to 'event' this}}{{Event_title}}{{/link-to}}
+						{{#link-to 'event' this}}<div {{action toggleDetails id}}>{{Event_title}}</div>{{/link-to}}
 					</div>
 					{{/each}}
 				</div>
