make top bar part of app tmpl

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,4 +6,9 @@
 		<li>{{#link-to 'acts'}}acts{{/link-to}}</a></li>
 	</ul>
 </div>
+<header id="header" class="navbar navbar-inverse">
+	<a {{action toggleMenu}} class="btn">
+    	<i class="icon-reorder"></i> Menu
+	</a>
+</header>
 {{outlet}}
