--- a/app/templates/acts.hbs
+++ b/app/templates/acts.hbs
@@ -9,7 +9,7 @@
 				<div class="list-group m-b-small">
 					{{#each}}
 					<div class="list-group-item">
-						{{#link-to 'act' this}}<div {{action toggleDetails}}>{{name_act_nl}}</div>{{/link-to}}
+						{{#link-to 'act' this}}<div {{action toggleDetails id}}>{{name_act_nl}}</div>{{/link-to}}
 					</div>
 					{{/each}}
 				</div>
