--- a/app/templates/events.hbs
+++ b/app/templates/events.hbs
@@ -9,7 +9,7 @@
 				<div class="list-group m-b-small">
 					{{#each}}
 					<div class="list-group-item">
-						{{#link-to 'event' this}}<div {{action toggleDetails id}}>{{Event_title}}</div>{{/link-to}}
+						{{#link-to 'event' this}}<div {{action toggleDetails id}}>{{title}}</div>{{/link-to}}
 					</div>
 					{{/each}}
 				</div>
