--- a/app/templates/event.hbs
+++ b/app/templates/event.hbs
@@ -1,1 +1,9 @@
-<h1>{{Event_title}}</h1>
+<h1>{{title}}</h1>
+{{description}}
+{{#if isEditing}}
+{{partial 'event_edit'}}
+<button class="btn" {{action doneEditing}}>Done</button>
+{{else}}
+<button class="btn" {{action edit}}>Edit</button>
+{{/if}}
+
